connectdb and add tab for mainScene